--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="/">
+            <a href="index.html">
             Home
             </a>
             <a href="lookbook.html">
               lookbook
             </a>
-            <a href="/mens.html">
+            <a href="mens.html">
               Mens
             </a>
-            <a href="lookbook.html">
+            <a href="womens.html">
               Womens
             </a>
             <a href="lookbook.html">
