--- a/lookbook.html
+++ b/lookbook.html
@@ -14,7 +14,7 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="/">
+            <a href="index.html">
             Home
             </a>
             <a href="lookbook.html">
