--- a/mens.html
+++ b/mens.html
@@ -15,13 +15,13 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="/">
+            <a href="index.html">
             Home
             </a>
             <a href="lookbook.html">
               lookbook
             </a>
-            <a href="mens.html">
+            <a href="/mens.html">
               Mens
             </a>
             <a href="womens.html">
@@ -113,7 +113,7 @@
 <div class="quickview-title">Quick View</div>
 </div>
 <div class="product-thumb-title">
-<h3>OFF-WHITE x MoMA x Air Force 1 07 'Black'</h3>
+<h3>OFF-WHITE x MoMA </h3>
 <h3>Price : <span>$1700</span></h3>
 </div>
 </div>
@@ -136,7 +136,7 @@
 <div class="quickview-title">Quick View</div>
 </div>
 <div class="product-thumb-title">
-<h3>OFF-WHITE x Air Force 1</h3>
+<h3>OFF-WHITE x Air Force 1 'original'</h3>
 <h3>Price : <span>$870</span></h3>
 </div>
 </div>
@@ -176,6 +176,7 @@
 </div>
 </div>
 
+
 <h1 class="heading1">Jordans</h1>
 
 <div class="product-thumb">
@@ -207,7 +208,7 @@
 <div class="quickview-title">Quick View</div>
 </div>
 <div class="product-thumb-title">
-<h3>OFF-WHITE x Air Max 97</h3>
+<h3>OFF-WHITE x Air Jordan 1 Retro High OG 'blue'</h3>
 <h3>Price : <span>$800</span></h3>
 </div>
 </div>
@@ -217,7 +218,7 @@
 <img src="img/335047_01.png">
 </div>
 <div class="product-big-desc">
-<h2>OFF-WHITE x Air Max 97</h2>
+<h2>OFF-WHITE x Air Jordan 1 Retro High OG 'blue'</h2>
 <h5>Brand : OFF-WHITE | NIKE </h5>
 <h6> Released as part of ‘The Ten’ collection from November 2017, Virgil Abloh’s take on the Air Max 97 focuses on the shoe’s upper. The retro runner’s translucent build serves to tone down the visual impact of its signature wavy lines, so that the eye is drawn to the overall shape instead. ‘AIR’ stamped on the lateral side serves as a reminder of the technical innovation inherent in the '97 – the first Nike silhouette to feature a full-length Max Air unit.</h6>
 <button class="buybutton">Click to Buy</button>
