--- a/womens.html
+++ b/womens.html
@@ -15,7 +15,7 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="/">
+            <a href="index.html">
             Home
             </a>
             <a href="lookbook.html">
@@ -49,24 +49,24 @@
 <div class="product-view">
 	<div class="close-btn">X</div>
 	<div class="product-big-image">
-		<img src="img/406001_01.png">
+		<img src="img/371224_01.png">
 	</div>
 	<div class="product-big-desc">
-		<h2>OFF-WHITE x Blazer Mid 'Grim Reapers'</h2>
+		<h2>OFF-WHITE x Blazer Mid 'All Hallows Eve'</h2>
 		<h5>Brand : OFF-WHITE | NIKE </h5>
-    <h6> Releasing alongside an accompanying ‘All Hallow’s Eve’ colorway in orange, the OFF-WHITE x Blazer Mid ‘Grim Reapers’ completes Virgil Abloh’s Halloween-themed sneaker pack. The black and grey upper sports contrast orange stitching in celebration of the October holiday, along with an oversized white Swoosh, blue zip tie and OFF-WHITE lettering on the quarter panel of the shoe’s medial side.</h6>
+    <h6> The OFF-WHITE x Blazer Mid ‘All Hallows Eve’ showcases a seasonally appropriate orange Swoosh atop a Pale Vanilla base. The yellowish tan hue extends to the exposed-foam tongue and rubber midsole, with the signature zip tie in blue adding a contrasting pop of color. Virgil Abloh’s signature lines of text register an appearance on the medial-side quarter panel.</h6>
 		<button class="buybutton">Click to Buy</button>
 	</div>
 </div>
 
 <div class="product-thumb">
 <div class="product-thumb-image">
-<img src="img/406001_01.png">
+<img src="img/371224_01.png">
 <div class="quickview-title">Quick View</div>
 </div>
 <div class="product-thumb-title">
-<h3>OFF-WHITE x Blazer Mid 'Grim Reapers'</h3>
-<h3>Price : <span>$415</span></h3>
+<h3>OFF-WHITE x Blazer Mid 'All Hallows Eve'</h3>
+<h3>Price : <span>$530</span></h3>
 </div>
 </div>
 <div class="product-view">
@@ -84,23 +84,23 @@
 
 <div class="product-thumb">
 <div class="product-thumb-image">
-<img src="img/406001_01.png">
+<img src="img/442438_01.png">
 <div class="quickview-title">Quick View</div>
 </div>
 <div class="product-thumb-title">
-<h3>OFF-WHITE x Blazer Mid 'Grim Reapers'</h3>
-<h3>Price : <span>$415</span></h3>
+<h3>Serena Williams x OFF-WHITE x Blazer Studio Mid 'Queen'</h3>
+<h3>Price : <span>$625</span></h3>
 </div>
 </div>
 <div class="product-view">
 <div class="close-btn">X</div>
 <div class="product-big-image">
-<img src="img/406001_01.png">
+<img src="img/442438_01.png">
 </div>
 <div class="product-big-desc">
-<h2>OFF-WHITE x Blazer Mid 'Grim Reapers'</h2>
+<h2>Serena Williams x OFF-WHITE x Blazer Studio Mid 'Queen'</h2>
 <h5>Brand : OFF-WHITE | NIKE </h5>
-<h6> Releasing alongside an accompanying ‘All Hallow’s Eve’ colorway in orange, the OFF-WHITE x Blazer Mid ‘Grim Reapers’ completes Virgil Abloh’s Halloween-themed sneaker pack. The black and grey upper sports contrast orange stitching in celebration of the October holiday, along with an oversized white Swoosh, blue zip tie and OFF-WHITE lettering on the quarter panel of the shoe’s medial side.</h6>
+<h6> The OFF-WHITE x Blazer Studio Mid ‘Queen’ was designed by Virgil Abloh as part of a larger collection celebrating Serena Williams’ appearance at the 2018 U.S. Open. The mid-top sports a Wolf Grey upper built with a combination of leather, suede and translucent textile, accented with an oversized Swoosh in black. The rubber midsole features gradient coloring that transitions from pink to purple to grey. Signature OFF-WHITE text adorns the side panel on the shoe’s medial side, and "QUEEN OF QUEENS, NY" is stamped on the volt zip-tie.</h6>
 <button class="buybutton">Click to Buy</button>
 </div>
 </div>
