--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="womens.html">
               Womens
             </a>
-            <a href="lookbook.html">
+            <a href="news.html">
               News
             </a>
           </nav>
