--- a/womens.html
+++ b/womens.html
@@ -27,7 +27,7 @@
             <a href="womens.html">
               Womens
             </a>
-            <a href="lookbook.html">
+            <a href="news.html">
               News
             </a>
           </nav>
@@ -247,13 +247,6 @@
 <button class="buybutton">Click to Buy</button>
 </div>
 </div>
-
-
-
-
-
-
-
 
 
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
