--- a/index.html
+++ b/index.html
@@ -2,343 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Hypexstreet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/sass/main.css">
-    <link rel="stylesheet"  href="css/style.css">
-    <meta http-equiv="refresh" content="30">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="/css/main.css">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+  </head>
   <body>
-    <div class="container">
-      <header id="header">
-        <div class="logo">
-          HypeXstreet
-        </div>
-        <div class="menu">
-          <nav>
-            <a href="index.html">
-            Home
-            </a>
-            <a href="jackets.html">
-              jackets
-            </a>
-            <a href="hoodies.html">
-              Hoodies
-            </a>
-            <a href="pants.html">
-              pants
-            </a>
-            <a href="news.html">
-              News
-            </a>
-            <a href="contact.html">
-              Contact
-            </a>
-          </nav>
-        </div>
-      </header>
-
-        <div class="Containerlookbook">
-          <h2>
-            HypeXstreet|featuring the best in urban streetwear
-          </h2>
-          <b>
-          <h2>
-          Check out the lookbook below
-          </h2>
-        </div>
-
-    <!-- Container for the image gallery -->
-<div class="container1">
-
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB14_A3nFooBKNjSZPhq6A2CXXaT.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB13Sa_c56guuRkSmLyq6AulFXa5.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 30</div>
-      <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-  </div>  <div class="mySlides">
-      <div class="numbertext">1 / 30</div>
-        <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">2 / 30</div>
-        <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">3 / 30</div>
-        <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-    </div>  <div class="mySlides">
-        <div class="numbertext">1 / 30</div>
-          <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">2 / 30</div>
-          <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-      </div>
-
-      <div class="mySlides">
-        <div class="numbertext">3 / 30</div>
-          <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-      </div>  <div class="mySlides">
-          <div class="numbertext">1 / 30</div>
-            <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-        </div>
-
-        <div class="mySlides">
-          <div class="numbertext">2 / 30</div>
-            <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-        </div>
-
-        <div class="mySlides">
-          <div class="numbertext">3 / 30</div>
-            <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-        </div>  <div class="mySlides">
-            <div class="numbertext">1 / 30</div>
-              <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">2 / 30</div>
-              <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">3 / 30</div>
-              <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-          </div>  <div class="mySlides">
-              <div class="numbertext">1 / 30</div>
-                <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-            </div>
-
-            <div class="mySlides">
-              <div class="numbertext">2 / 30</div>
-                <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-            </div>
-
-            <div class="mySlides">
-              <div class="numbertext">3 / 30</div>
-                <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-            </div>  <div class="mySlides">
-                <div class="numbertext">1 / 30</div>
-                  <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-              </div>
-
-              <div class="mySlides">
-                <div class="numbertext">2 / 30</div>
-                  <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-              </div>
-
-              <div class="mySlides">
-                <div class="numbertext">3 / 30</div>
-                  <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-              </div>  <div class="mySlides">
-                  <div class="numbertext">1 / 30</div>
-                    <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-                </div>
-
-                <div class="mySlides">
-                  <div class="numbertext">2 / 30</div>
-                    <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-                </div>
-
-                <div class="mySlides">
-                  <div class="numbertext">3 / 30</div>
-                    <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-                </div>  <div class="mySlides">
-                    <div class="numbertext">1 / 30</div>
-                      <img src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%">
-                  </div>
-
-                  <div class="mySlides">
-                    <div class="numbertext">2 / 30</div>
-                      <img src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%">
-                  </div>
-
-                  <div class="mySlides">
-                    <div class="numbertext">3 / 30</div>
-                      <img src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%">
-                  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Windbreaker 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB14_A3nFooBKNjSZPhq6A2CXXaT.jpg" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB13Sa_c56guuRkSmLyq6AulFXa5.jpg" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div><div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1lDXtXIfrK1RkSmLyq6xGApXa9.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(1)" alt="Vintage Track Hoodie 'Summit'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1dh0wXPDuK1Rjy1zjq6zraFXam.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(2)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'blue'">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://ae01.alicdn.com/kf/HTB1pJG7XOfrK1RjSspbq6A4pFXan.jpg?width=750&height=520&hash=1270" style="width:100%" onclick="currentSlide(3)" alt="OFF-WHITE x Air Jordan 1 Retro High OG 'White' 2018">
-    </div>
-
-    </div>
-  </div>
-
-  <div class="footer">
-    <div class="menu">
-      <nav>
-        <a href="index.html">
-        Home
-        </a>
-        <a href="lookbook.html">
-          lookbook
-        </a>
-        <a href="mens.html">
-          Mens
-        </a>
-        <a href="womens.html">
-          Womens
-        </a>
-        <a href="news.html">
-          News
-        </a>
-      </nav>
-    </div>
-  </div>
-</div>
-
-
+    <div id="app"></div>
+    <script src="/js/components/vendor.js"></script>
+    <script src="/js/components/firstComp.js"></script>
   </body>
-  <script>
-  var slideIndex = 1;
-  showSlides(slideIndex);
-
-  // Next/previous controls
-  function plusSlides(n) {
-    showSlides(slideIndex += n);
-  }
-
-  // Thumbnail image controls
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-
-  function showSlides(n) {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("demo");
-    var captionText = document.getElementById("caption");
-    if (n > slides.length) {slideIndex = 1}
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " active";
-    captionText.innerHTML = dots[slideIndex-1].alt;
-  }
-  </script>
 </html>
